--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "idb": "^8.0.3",
     "leaflet": "^1.9.4",
     "workbox-background-sync": "^7.3.0",
     "workbox-cacheable-response": "^7.3.0",
@@ -17,7 +18,9 @@
     "workbox-strategies": "^7.3.0"
   },
   "devDependencies": {
+    "prettier": "3.5.3",
     "vite": "^6.3.4",
-    "vite-plugin-pwa": "^1.0.0"
+    "vite-plugin-pwa": "^1.0.0",
+    "workbox-cli": "^7.3.0"
   }
 }
